Add Cart page and header

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cake Express</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <navbar></navbar>
+        <navbar>
+            <a href="./pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+        </navbar>
     </header>
     <div class="hero-section"></div>
     <div></div>
