--- a/pages/cart.html
+++ b/pages/cart.html
@@ -5,10 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add To Cart</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
     <link rel="stylesheet" href="../css/style.css">
-    
+
 </head>
 <body>
-    
+    <section id="header">
+        <a href="#"><img src="../images/logo.png" class="logo" alt="Company Logo"></a>
+
+        <div>
+            <ul id="navbar">
+                <li><a href="index.html">Home Page</a></li>
+                <li><a href="customs.html">Custom Cakes</a></li>
+                <li id="lg-bag"><a class="active" href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
+            </ul>
+        </div>
+    </section>
+    <section id="page-header" class="cart-header">
+        <!-- <p>Add your coupon code & SAVE upto 70%</p> -->
+    </section>
+    <section id="cart" class="section-p1">
+        <table widthe = "100%">
+            <thead>
+                <tr>
+                    <td>Remove</td>
+                    <td>Image</td>
+                    <td>Product</td>
+                    <td>Price</td>
+                    <td>Quantity</td>
+                    <td>Subtotal</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><a href="#"><i class="far fa-times-circle" style="color: #E5E7EB;"></i></a></td>
+                    <td><img src="../images/MickeyC.jpg" alt="Mickey Birthday Cake"></td>
+                    <td>Mickey Mouse Cake</td>
+                    <td>$ 35.00</td>
+                    <td><input type="number" value="1"></td>
+                    <td>$ 35.00</td>
+                </tr>
+                <tr>
+                    <td><a href="#"><i class="far fa-times-circle" style="color: #E5E7EB;"></i></a></td>
+                    <td><img src="../images/minionC.jpg" alt="Minion Birthday Cake"></td>
+                    <td>Minion Cake</td>
+                    <td>$ 30.00</td>
+                    <td><input type="number" value="1"></td>
+                    <td>$ 30.00</td>
+                </tr>
+                <tr>
+                    <td><a href="#"><i class="far fa-times-circle" style="color: #E5E7EB;"></i></a></td>
+                    <td><img src="../images/buttonC.jpg" alt="Button Birthday Cake"></td>
+                    <td>Button Cake</td>
+                    <td>$ 35.00</td>
+                    <td><input type="number" value="1"></td>
+                    <td>$ 35.00</td>
+                </tr>
+                <tr>
+                    <td><a href="#"><i class="far fa-times-circle" style="color: #E5E7EB;"></i></a></td>
+                    <td><img src="../images/macaron-box.jpg" alt="Macaron one box"></td>
+                    <td>Macaron Box</td>
+                    <td>$ 40.00</td>
+                    <td><input type="number" value="1"></td>
+                    <td>$ 40.00</td>
+                </tr>
+            </tbody>
+        </table>
+   </section>
 </body>
 </html>
