--- a/pages/cart.html
+++ b/pages/cart.html
@@ -21,7 +21,7 @@
             </ul>
         </div>
     </section>
-    <section id="page-header" class="cart-header">
+    <section class="cart-header">
     </section>
     <section id="cart" class="section-p1">
         <table widthe = "100%">
@@ -35,9 +35,9 @@
                     <td>Subtotal</td>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="font">
                 <tr>
-                    <td><a href="#"><i class="far fa-times-circle" style="color: #E5E7EB;"></i></a></td>
+                    <td><a href="#"><i class="far fa-times-circle" style="color: #ef3a3a;"></i></a></td>
                     <td><img src="../images/MickeyC.jpg" alt="Mickey Birthday Cake"></td>
                     <td>Mickey Mouse Cake</td>
                     <td>$ 35.00</td>
@@ -45,7 +45,7 @@
                     <td>$ 35.00</td>
                 </tr>
                 <tr>
-                    <td><a href="#"><i class="far fa-times-circle" style="color: #E5E7EB;"></i></a></td>
+                    <td><a href="#"><i class="far fa-times-circle" style="color: #ef3a3a;"></i></a></td>
                     <td><img src="../images/minionC.jpg" alt="Minion Birthday Cake"></td>
                     <td>Minion Cake</td>
                     <td>$ 30.00</td>
@@ -53,7 +53,7 @@
                     <td>$ 30.00</td>
                 </tr>
                 <tr>
-                    <td><a href="#"><i class="far fa-times-circle" style="color: #E5E7EB;"></i></a></td>
+                    <td><a href="#"><i class="far fa-times-circle" style="color: #ef3a3a;"></i></a></td>
                     <td><img src="../images/buttonC.jpg" alt="Button Birthday Cake"></td>
                     <td>Button Cake</td>
                     <td>$ 35.00</td>
@@ -61,7 +61,7 @@
                     <td>$ 35.00</td>
                 </tr>
                 <tr>
-                    <td><a href="#"><i class="far fa-times-circle" style="color: #E5E7EB;"></i></a></td>
+                    <td><a href="#"><i class="far fa-times-circle" style="color: #ef3a3a;"></i></a></td>
                     <td><img src="../images/macaron-box.jpg" alt="Macaron one box"></td>
                     <td>Macaron Box</td>
                     <td>$ 40.00</td>
