--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <navbar>
-            <a href="./pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-        </navbar>
-    </header>
+    <section id="header">
+        <a href="../index.html"><img src="../images/logo.png" class="logo" alt="Company Logo"></a>
+
+        <div>
+            <ul id="navbar">
+                <li><a href="/index.html">Home Page</a></li>
+                <li><a href="./pages/customs.html">Custom Cakes</a></li>
+                <li id="lg-bag"><a class="active" href="./pages/cart.html"><i class="far fa-shopping-cart"></i></a></li>
+            </ul>
+        </div>
     <div class="hero-section"></div>
     <div></div>
     <div class="quote-section"></div>
