--- a/pages/cart.html
+++ b/pages/cart.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <section id="header">
-        <a href="#"><img src="../images/logo.png" class="logo" alt="Company Logo"></a>
+        <a href="../index.html"><img src="../images/logo.png" class="logo" alt="Company Logo"></a>
 
         <div>
             <ul id="navbar">
-                <li><a href="index.html">Home Page</a></li>
+                <li><a href="../index.html">Home Page</a></li>
                 <li><a href="customs.html">Custom Cakes</a></li>
                 <li id="lg-bag"><a class="active" href="cart.html"><i class="far fa-shopping-cart"></i></a></li>
             </ul>
