--- a/pages/customs.html
+++ b/pages/customs.html
@@ -7,9 +7,16 @@
     <title>Custom Cakes</title>
 </head>
 <body>
-    <header>
-        <navbar></navbar>
-    </header>
+    <section id="header">
+        <a href="../index.html"><img src="../images/logo.png" class="logo" alt="Company Logo"></a>
+
+        <div>
+            <ul id="navbar">
+                <li><a href="../index.html">Home Page</a></li>
+                <li><a href="customs.html">Custom Cakes</a></li>
+                <li id="lg-bag"><a class="active" href="cart.html"><i class="far fa-shopping-cart"></i></a></li>
+            </ul>
+        </div>
     <footer></footer>
 </body>
 </html>
