--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
     <section id="header">
         <a href="../index.html"><img src="../images/logo.png" class="logo" alt="Company Logo"></a>
-
         <div>
             <ul id="navbar">
                 <li><a href="/index.html">Home Page</a></li>
@@ -19,8 +18,15 @@
                 <li id="lg-bag"><a class="active" href="./pages/cart.html"><i class="far fa-shopping-cart"></i></a></li>
             </ul>
         </div>
-    <div class="hero-section"></div>
-    <div></div>
+    </section>
+    <div class="hero-section">
+        <h2>The Best Things In Life Are <strong>Sweet!</strong></h2>
+        <p>Sweethouse Bakery has been making France’s favorite baked goods 
+            the old-fashioned way: from scratch. In both large and small
+            batches, and using the finest ingredients.</p>
+        <a id="shop-button">Shop now</a>
+        <img id="hero-image1" src="./images/hero-image.png">
+    </div>
     <div class="quote-section"></div>
     <footer></footer>
 </body>
