--- a/pages/customs.html
+++ b/pages/customs.html
@@ -9,7 +9,6 @@
 <body>
     <section id="header">
         <a href="../index.html"><img src="../images/logo.png" class="logo" alt="Company Logo"></a>
-
         <div>
             <ul id="navbar">
                 <li><a href="../index.html">Home Page</a></li>
@@ -17,6 +16,7 @@
                 <li id="lg-bag"><a class="active" href="cart.html"><i class="far fa-shopping-cart"></i></a></li>
             </ul>
         </div>
+    <img id="hero-image2" src="./images/hero-image2.png">
     <footer></footer>
 </body>
 </html>
