added text and image styling to home page hero section

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
             </ul>
         </div>
     </section>
-    <div class="hero-section">
-        <h2>The Best Things In Life Are <strong>Sweet!</strong></h2>
-        <p>Sweethouse Bakery has been making France’s favorite baked goods 
-            the old-fashioned way: from scratch. In both large and small
-            batches, and using the finest ingredients.</p>
-        <a id="shop-button">Shop now</a>
-        <img id="hero-image1" src="./images/hero-image.png">
+    <div>
+        <section class="hero-section">
+            <h1>The Best Things In Life Are <strong>Sweet!</strong></h1>
+            <h3><p>Sweethouse Bakery has been making France’s favorite baked goods 
+                the old-fashioned way: from scratch. In both large and small
+                batches, and using only the finest ingredients.</p></h3>
+            <a id="shop-button" href="./pages/customs.html">Shop now</a>
+            <img id="hero-image1" src="./images/hero-image1.png">
+        </section>
     </div>
     <div class="quote-section"></div>
     <footer></footer>
