added hero section text and image to home page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h3><p>Sweethouse Bakery has been making France’s favorite baked goods 
                 the old-fashioned way: from scratch. In both large and small
                 batches, and using only the finest ingredients.</p></h3>
-            <a id="shop-button" href="./pages/customs.html">Shop now</a>
+            <a id="shop-button" href="./pages/customs.html">Shop now!</a>
             <img id="hero-image1" src="./images/hero-image1.png">
         </section>
     </div>
