--- a/pages/cart.html
+++ b/pages/cart.html
@@ -15,8 +15,8 @@
 
         <div>
             <ul id="navbar">
-                <li><a href="index.html">Home Page</a></li>
-                <li><a href="customs.html">Custom Cakes</a></li>
+                <li><a href="../index.html">Home Page</a></li>
+                <li><a href="./customs.html">Custom Cakes</a></li>
                 <li id="lg-bag"><a class="active" href="cart.html"><i class="far fa-shopping-cart"></i></a></li>
             </ul>
         </div>
