--- a/pages/customs.html
+++ b/pages/customs.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
+
     <title>Custom Cakes</title>
 </head>
+
 <body>
-    <header>
-        <navbar></navbar>
-    </header>
-    <footer></footer>
+
+    <section class="footer-banner">
+        <div class="wrapper">
+            <div class="col ">
+
+                <img class="footer-image" src="../css/images/footer-banner.jpg" alt="footer-banner-img">
+                <div class="footer-banner-text">
+                    <h1 class="footer-banner-image-heading">Sign Up For Newsletter</h1>
+                    <p class="p-color-base">Get E-mail updates about our promotion and
+                        <span class="p-color-secondary">special offers.</span> </p>
+                </div>
+
+            </div>
+            <div class="col">
+                <div class="input-form">
+                    <input class="input" type="email" placeholder="Your Email Address">
+                    <button class="btn-type-primary">Sign Up</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
