--- a/pages/customs.html
+++ b/pages/customs.html
@@ -4,12 +4,107 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/a2bc2a47a7.js" crossorigin="anonymous"></script>
     <title>Custom Cakes</title>
 </head>
 <body>
     <header>
         <navbar></navbar>
     </header>
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <div class="footer">
+                <div class="footer-top">
+
+                    <div class="footer-heading footer-1">
+
+                        <div class="logo">
+                            <img src="./images/SweetHouse.png" alt="SweetHouse">
+                            <h3> SweetHouse</h3>
+                        </div>
+
+                        <div class="contact-us">
+                            <h2> Contact</h2>
+                            <p> Adress: Markanadsvagen 9,254 69 Odakra-vala</p>
+                            <p> Phone: (+46) 42248280</p>
+                            <p> Hours: 10 am- 8 pm. Mon-Fri</p>
+                        </div>
+
+                        <div class="footer-heading footer-4">
+                            <h2>Follow us</h2>
+                            <ul class="social-media">
+                                <li>
+                                    <i class="fa-brands fa-twitter"></i>
+                                </li>
+                                <li>
+                                    <i class="fa-brands fa-facebook"></i>
+                                </li>
+                                <li>
+                                    <i class="fa-brands fa-pinterest"></i>
+                                </li>
+                                <li>
+                                    <i class="fa-brands fa-instagram"></i>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="footer-heading footer-2">
+                        <h2> About us</h2>
+                        <ul>
+                            <li>
+                                <a href="#"> About us</a>
+                            </li>
+                            <li>
+                                <a href="#"> Delivery information</a>
+                            </li>
+                            <li>
+                                <a href="#"> Privacy policy</a>
+                            </li>
+                            <li>
+                                <a href="#"> Terms& conditions</a>
+                            </li>
+                            <li>
+                                <a href="#"> Contact us</a>
+                            </li>
+                        </ul>
+
+                    </div>
+
+                    <div class="footer-heading footer-3">
+                        <div class="top">
+                            <h2> My account</h2>
+                            <ul>
+                                <li>
+                                    <a href="#"> Sign in </a>
+                                </li>
+                                <li>
+                                    <a href="#"> View cart</a>
+                                </li>
+                                <li>
+                                    <a href="#"> My wishlist</a>
+                                </li>
+                                <li>
+                                    <a href="#"> Track my order</a>
+                                </li>
+                                <li>
+                                    <a href="#"> Help</a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="payment-gateway-container">
+                            <h3>Secured Payment Gateway</h3>
+                            <img src="./images/paymentgateway.png" alt="Payment Gateway">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer-bottom">
+                    <p>All right reserved by &copy;conceptial 2023</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
