--- a/pages/cart.html
+++ b/pages/cart.html
@@ -69,5 +69,100 @@
             </tbody>
         </table>
    </section>
+   <footer>
+    <div class="footer-container">
+        <div class="footer">
+            <div class="footer-top">
+
+                <div class="footer-heading footer-1">
+
+                    <div class="logo">
+                        <img src="../images/logo.png" alt="SweetHouse">
+                        <h3> SweetHouse</h3>
+                    </div>
+
+                    <div class="contact-us">
+                        <h2> Contact</h2>
+                        <p> Adress: Markanadsvagen 9,254 69 Odakra-vala</p>
+                        <p> Phone: (+46) 42248280</p>
+                        <p> Hours: 10 am- 8 pm. Mon-Fri</p>
+                    </div>
+
+                    <div class="footer-heading footer-4">
+                        <h2>Follow us</h2>
+                        <ul class="social-media">
+                            <li>
+                                <i class="fa-brands fa-twitter"></i>
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-facebook"></i>
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-pinterest"></i>
+                            </li>
+                            <li>
+                                <i class="fa-brands fa-instagram"></i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="footer-heading footer-2">
+                    <h2> About us</h2>
+                    <ul>
+                        <li>
+                            <a href="#"> About us</a>
+                        </li>
+                        <li>
+                            <a href="#"> Delivery information</a>
+                        </li>
+                        <li>
+                            <a href="#"> Privacy policy</a>
+                        </li>
+                        <li>
+                            <a href="#"> Terms& conditions</a>
+                        </li>
+                        <li>
+                            <a href="#"> Contact us</a>
+                        </li>
+                    </ul>
+
+                </div>
+
+                <div class="footer-heading footer-3">
+                    <div class="top">
+                        <h2> My account</h2>
+                        <ul>
+                            <li>
+                                <a href="#"> Sign in </a>
+                            </li>
+                            <li>
+                                <a href="#"> View cart</a>
+                            </li>
+                            <li>
+                                <a href="#"> My wishlist</a>
+                            </li>
+                            <li>
+                                <a href="#"> Track my order</a>
+                            </li>
+                            <li>
+                                <a href="#"> Help</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="payment-gateway-container">
+                        <h3>Secured Payment Gateway</h3>
+                        <img src="./images/paymentgateway.png" alt="Payment Gateway">
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>All right reserved by &copy;conceptial 2023</p>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
