--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="hero-section"></div>
 =======
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
+        <script src="https://kit.fontawesome.com/a2bc2a47a7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -57,7 +58,7 @@
                     <div class="footer-heading footer-1">
 
                         <div class="logo">
-                            <img src="./images/logo.png" alt="SweetHouse">
+                            <img src="./images/SweetHouse.png" alt="SweetHouse">
                             <h3> SweetHouse</h3>
                         </div>
 
