--- a/pages/customs.html
+++ b/pages/customs.html
@@ -196,7 +196,7 @@
                   <div class="footer-heading footer-1">
 
                       <div class="logo">
-                        <img src="./logo/SweetHouse.png" alt="SweetHouse">
+                        <img src="./images/logo.png" alt="SweetHouse">
                           <h3> SweetHouse</h3>
                       </div>
 
