--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="footer-heading footer-1">
 
                         <div class="logo">
-                            <img src="./images/SweetHouse.png" alt="SweetHouse">
+                        <img src="./images/logo.png" alt="SweetHouse">
                             <h3> SweetHouse</h3>
                         </div>
 
