--- a/index.html
+++ b/index.html
@@ -4,63 +4,74 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cake Express</title>
-  </head>
-  <body>
-    <div class="hero-section"></div>
-=======
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
     <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    <section id="header">
-        <a href="../index.html"><img src="../images/logo.png" class="logo" alt="Company Logo"></a>
+    <title>Cake Express</title>
+  </head>
+    <body>
+        <section id="header">
+            <a href="../index.html"><img src="../images/logo.png" class="logo" alt="Company Logo"></a>
+            <div>
+                <ul id="navbar">
+                    <li><a href="/index.html">Home Page</a></li>
+                    <li><a href="./pages/customs.html">Custom Cakes</a></li>
+                    <li id="lg-bag"><a class="active" href="./pages/cart.html"><i class="far fa-shopping-cart"></i></a></li>
+                </ul>
+            </div>
+        </section>
         <div>
-            <ul id="navbar">
-                <li><a href="/index.html">Home Page</a></li>
-                <li><a href="./pages/customs.html">Custom Cakes</a></li>
-                <li id="lg-bag"><a class="active" href="./pages/cart.html"><i class="far fa-shopping-cart"></i></a></li>
-            </ul>
-        </div>
-    </section>
-    <div>
         <section class="hero-section">
             <h1>The Best Things In Life Are <strong>Sweet!</strong></h1>
-            <h3><p>Sweethouse Bakery has been making France’s favorite baked goods 
+            <h3><p>Cake Express Bakery has been making France’s favorite baked goods 
                 the old-fashioned way: from scratch. In both large and small
                 batches, and using only the finest ingredients.</p></h3>
             <a id="shop-button" href="./pages/customs.html">Shop now!</a>
             <img id="hero-image1" src="./images/hero-image1.png">
         </section>
-    </div>
-    <div class="quote-section">
-        <div class="quote">
-            <p class="quote-text">
-                "Delicious cakes aren't just made, they're crafted with care and passion.
-                We take pride in every cake we create, using only the finest ingredients and putting our heart into
-                every
-                detail.
-                From classic flavors to creative designs, we strive to make every cake a work of art that delights the
-                senses
-                and leaves a lasting impression on every customer."
-            </p>
-            <p class="quote-text2">
-                -SweetHouse
-            </p>
         </div>
-    </div>
+        <section id="feature" class="section-p1">
+            <div class="fe-box">
+                <img src="./images/freeshipping.png" alt="">
+                <h6>Free Shipping</h6>
+            </div>
+            <div class="fe-box">
+                <img src="./images/orderonline.png" alt="">
+                <h6>Online order</h6>
+            </div>
+            <div class="fe-box">
+                <img src="./images/savingmoney.png" alt="">
+                <h6>Save money</h6>
+            </div>
+            <div class="fe-box">
+                <img src="./images/support.png" alt="">
+                <h6>Support</h6>
+            </div>
+        </section>        
+        <div class="quote-section">
+            <div class="quote">
+                <p class="quote-text">
+                    "Delicious cakes aren't just made, they're crafted with care and passion.
+                    We take pride in every cake we create, using only the finest ingredients and putting our heart into
+                    every
+                    detail.
+                    From classic flavors to creative designs, we strive to make every cake a work of art that delights the
+                    senses
+                    and leaves a lasting impression on every customer."
+                </p>
+                <p class="quote-text2">
+                    -Cake Express
+                </p>
+            </div>
+        </div>
     <footer>
         <div class="footer-container">
             <div class="footer">
                 <div class="footer-top">
-
                     <div class="footer-heading footer-1">
-
                         <div class="logo">
-                            <img src="./images/logo.png" alt="SweetHouse">
-                            <h3> SweetHouse</h3>
+                            <img src="./images/logo.png" alt="Cake Express logo">
+                            <h3>Cake Express</h3>
                         </div>
-
                         <div class="contact-us">
                             <h2> Contact</h2>
                             <p> Address: Markanadsvagen 9,254 69 Odakra-vala</p>
@@ -144,5 +155,5 @@
             </div>
         </div>
     </footer>  
-</body>
+    </body>
 </html>
