--- a/pages/customs.html
+++ b/pages/customs.html
@@ -196,8 +196,8 @@
                   <div class="footer-heading footer-1">
 
                       <div class="logo">
-                          <img src="../images/logo.png" alt="SweetHouse">
-                          <h3> SweetHouse</h3>
+                          <img src="../images/logo.png" alt="Cake Express logo">
+                          <h3>Cake Express</h3>
                       </div>
 
                       <div class="contact-us">
