--- a/pages/cart.html
+++ b/pages/cart.html
@@ -71,6 +71,38 @@
             </tbody>
         </table>
     </section>
+    <section class="cart">
+        <div class="wrapper">
+            <div class="col">
+                <div class="input-form">
+                    <h4 class="coupon-cart">Apply Coupon</h4>
+
+                    <input class="input" type="email" placeholder="Enter Your Coupon">
+                    <button class="btn-type-secondary ">Apply</button>
+                </div>
+
+            </div>
+            <div class="col form-design">
+                <h4 class="heading-cart">Cart Totals</h4>
+                <section class="inner-section">
+
+                    <div class="col">
+                        <p>Cart Subtotal</p>
+                        <p>Shoping</p>
+                        <p><b>Total</b> </p>
+                    </div>
+                    <div class="col ">
+                        <p>$135.00</p>
+                        <p>free</p>
+                        <p><b>$135.00</b></p>
+                    </div>
+
+
+                </section>
+                <button class="btn-type-tertiary">Proceed to checkout</button>
+            </div>
+        </div>
+    </section>
     <section class="footer-banner">
         <div class="wrapper">
             <div class="col ">
