fixed navbar and footer css bugs on customs page and added hero image to customs page

--- a/pages/customs.html
+++ b/pages/customs.html
@@ -5,13 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Custom Cakes</title>
-<<<<<< A-branch
 
     <!-- CSS file link -->
-    <link href="../css/customs-style.css" rel="stylesheet" />
+    <link href="../css/customs-style.css" rel="stylesheet"/>
   </head>
   <body>
     <main>
+      <section id="header">
+        <a href="../index.html"><img src="../images/logo.png" class="logo" alt="Company Logo"></a>
+        <div>
+            <ul id="navbar">
+                <li><a href="../index.html">Home Page</a></li>
+                <li><a href="customs.html">Custom Cakes</a></li>
+                <li id="lg-bag"><a class="active" href="cart.html"><i class="far fa-shopping-cart"></i></a></li>
+            </ul>
+        </div>
+      </section>
+      <img id="hero-image2" src="../images/hero-image2.png">
       <section class="products-gallery">
         <div class="cards-container">
           <div class="card">
@@ -175,19 +185,6 @@
         </nav>
       </section>
     </main>
-=======
-</head>
-<body>
-    <section id="header">
-        <a href="../index.html"><img src="../images/logo.png" class="logo" alt="Company Logo"></a>
-        <div>
-            <ul id="navbar">
-                <li><a href="../index.html">Home Page</a></li>
-                <li><a href="customs.html">Custom Cakes</a></li>
-                <li id="lg-bag"><a class="active" href="cart.html"><i class="far fa-shopping-cart"></i></a></li>
-            </ul>
-        </div>
-    <img id="hero-image2" src="./images/hero-image2.png">
     <footer>
       <div class="footer-container">
           <div class="footer">
@@ -272,7 +269,7 @@
 
                       <div class="payment-gateway-container">
                           <h3>Secured Payment Gateway</h3>
-                          <img src="./images/paymentgateway.png" alt="Payment Gateway">
+                          <img src="../images/paymentgateway.png" alt="Payment Gateway">
                       </div>
                   </div>
               </div>
