--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="hero-section"></div>
     =======
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+    <script src="https://kit.fontawesome.com/a2bc2a47a7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
     </head>
 
