fixed icons in footer and fixed bugs from d-branch merging

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
     <link rel="stylesheet" href="./css/style.css">
+    
+    <script src="https://kit.fontawesome.com/a2bc2a47a7.js" crossorigin="anonymous"></script>
     <title>Cake Express</title>
   </head>
     <body>
@@ -15,7 +18,7 @@
                 <ul id="navbar">
                     <li><a href="/index.html">Home Page</a></li>
                     <li><a href="./pages/customs.html">Custom Cakes</a></li>
-                    <li id="lg-bag"><a class="active" href="./pages/cart.html"><i class="far fa-shopping-cart"></i></a></li>
+                    <li id="lg-bag"><a class="active" href="./pages/cart.html"><i class="fas fa-shopping-cart"></i></a></li>
                 </ul>
             </div>
         </section>
@@ -63,6 +66,24 @@
                 </p>
             </div>
         </div>
+        <section class="footer-banner">
+            <div class="wrapper">
+                <div class="col ">
+                    <img class="footer-image" src="../css/images/footer-banner.jpg" alt="footer-banner-img">
+                    <div class="footer-banner-text">
+                        <h1 class="footer-banner-image-heading">Sign Up For Newsletter</h1>
+                        <p class="p-color-base">Get E-mail updates about our promotion and
+                            <span class="p-color-secondary">special offers.</span> </p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="input-form">
+                        <input class="input" type="email" placeholder="Your Email Address">
+                        <button class="btn-type-primary">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+        </section>    
     <footer>
         <div class="footer-container">
             <div class="footer">
@@ -111,7 +132,7 @@
                                 <a href="#"> Privacy policy</a>
                             </li>
                             <li>
-                                <a href="#"> Terms& conditions</a>
+                                <a href="#"> Terms & conditions</a>
                             </li>
                             <li>
                                 <a href="#"> Contact us</a>
