--- a/pages/cart.html
+++ b/pages/cart.html
@@ -7,6 +7,8 @@
     <title>Add To Cart</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
     <link rel="stylesheet" href="../css/style.css">
+
+    <script src="https://kit.fontawesome.com/a2bc2a47a7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="header">
@@ -15,7 +17,7 @@
             <ul id="navbar">
                 <li><a href="../index.html">Home Page</a></li>
                 <li><a href="customs.html">Custom Cakes</a></li>
-                <li id="lg-bag"><a class="active" href="cart.html"><i class="far fa-shopping-cart"></i></a></li>
+                <li id="lg-bag"><a class="active" href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </div>
     </section>
@@ -69,6 +71,51 @@
             </tbody>
         </table>
    </section>
+  <section class="cart">
+        <div class="wrapper">
+            <div class="col">
+                <div class="input-form">
+                    <h4 class="coupon-cart">Apply Coupon</h4>
+                    <input class="input" type="email" placeholder="Enter Your Coupon">
+                    <button class="btn-type-secondary ">Apply</button>
+                </div>
+            </div>
+            <div class="col form-design">
+                <h4 class="heading-cart">Cart Totals</h4>
+                <section class="inner-section">
+                    <div class="col">
+                        <p>Cart Subtotal</p>
+                        <p>Shoping</p>
+                        <p><b>Total</b> </p>
+                    </div>
+                    <div class="col ">
+                        <p>$135.00</p>
+                        <p>free</p>
+                        <p><b>$135.00</b></p>
+                    </div>
+                </section>
+                <button class="btn-type-tertiary">Proceed to checkout</button>
+            </div>
+        </div>
+    </section>
+    <section class="footer-banner">
+        <div class="wrapper">
+            <div class="col ">
+                <img class="footer-image" src="../css/images/footer-banner.jpg" alt="footer-banner-img">
+                <div class="footer-banner-text">
+                    <h1 class="footer-banner-image-heading">Sign Up For Newsletter</h1>
+                    <p class="p-color-base">Get E-mail updates about our promotion and
+                        <span class="p-color-secondary">special offers.</span> </p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="input-form">
+                    <input class="input" type="email" placeholder="Your Email Address">
+                    <button class="btn-type-primary">Sign Up</button>
+                </div>
+            </div>
+        </div>
+    </section>
    <footer>
     <div class="footer-container">
         <div class="footer">
@@ -120,7 +167,7 @@
                             <a href="#"> Privacy policy</a>
                         </li>
                         <li>
-                            <a href="#"> Terms& conditions</a>
+                            <a href="#"> Terms & conditions</a>
                         </li>
                         <li>
                             <a href="#"> Contact us</a>
@@ -153,7 +200,7 @@
 
                     <div class="payment-gateway-container">
                         <h3>Secured Payment Gateway</h3>
-                        <img src="./images/paymentgateway.png" alt="Payment Gateway">
+                        <img src="../images/paymentgateway.png" alt="Payment Gateway">
                     </div>
                 </div>
             </div>
