--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
     <body>
         <section id="header">
-            <a href="../index.html"><img src="../images/logo.png" class="logo" alt="Company Logo"></a>
+            <a href="../index.html"><img src="./images/logo.png" class="logo" alt="Company Logo"></a>
             <div>
                 <ul id="navbar">
                     <li><a href="/index.html">Home Page</a></li>
@@ -69,7 +69,7 @@
         <section class="footer-banner">
             <div class="wrapper">
                 <div class="col ">
-                    <img class="footer-image" src="../css/images/footer-banner.jpg" alt="footer-banner-img">
+                    <img class="footer-image" src="./css/images/footer-banner.jpg" alt="footer-banner-img">
                     <div class="footer-banner-text">
                         <h1 class="footer-banner-image-heading">Sign Up For Newsletter</h1>
                         <p class="p-color-base">Get E-mail updates about our promotion and
