updated css for the website

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -101,7 +101,7 @@
     <section class="footer-banner">
         <div class="wrapper">
             <div class="col ">
-                <img class="footer-image" src="../css/images/footer-banner.jpg" alt="footer-banner-img">
+                <img class="footer-image" src="../images/footer-banner.jpg" alt="footer-banner-img">
                 <div class="footer-banner-text">
                     <h1 class="footer-banner-image-heading">Sign Up For Newsletter</h1>
                     <p class="p-color-base">Get E-mail updates about our promotion and
