--- a/pages/customs.html
+++ b/pages/customs.html
@@ -4,196 +4,189 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
-    
+    <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/a2bc2a47a7.js" crossorigin="anonymous"></script>
-
     <title>Custom Cakes</title>
-
-    <!-- CSS file link -->
-    <link href="../css/customs-style.css" rel="stylesheet"/>
   </head>
   <body>
-    <main>
-      <section id="header">
-        <a href="../index.html"><img src="../images/logo.png" class="logo" alt="Company Logo"></a>
-        <div>
-            <ul id="navbar">
-                <li><a href="../index.html">Home Page</a></li>
-                <li><a href="customs.html">Custom Cakes</a></li>
-                <li id="lg-bag"><a class="active" href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
-            </ul>
+    <section id="header">
+      <a href="../index.html"><img src="../images/logo.png" class="logo" alt="Company Logo"></a>
+      <div>
+          <ul id="navbar" style="font-family: 'Roboto-Regular';">
+              <li><a href="../index.html">Home Page</a></li>
+              <li><a class="active" href="customs.html">Custom Cakes</a></li>
+              <li id="lg-bag"><a href="./cart.html"><i class="fas fa-shopping-cart"></i></a></li>
+          </ul>
+      </div>
+  </section>
+  <img id="hero-image2" src="../images/hero-image2.png" class="section-p1">
+  <section class="products-gallery">
+    <div class="cards-container">
+      <div class="card">
+        <img
+          src="../images/yellow-fruit-cake.png"
+          alt="Yellow Fruit Cake"
+          class="product-image"
+        />
+        <h3 class="card-title">Yellow Fruit Cake</h3>
+        <div class="card-row">
+          <p class="price">$35</p>
+          <a href="#"><img
+            src="../images/shopping-cart.png"
+            alt="Shopping cart icon"
+            class="shopping-cart-image"
+          /></a>
         </div>
-      </section>
-      <img id="hero-image2" src="../images/hero-image2.png">
-      <section class="products-gallery">
-        <div class="cards-container">
-          <div class="card">
-            <img
-              src="../images/yellow-fruit-cake.png"
-              alt="Yellow Fruit Cake"
-              class="product-image"
-            />
-            <h3 class="card-title">Yellow Fruit Cake</h3>
-            <div class="card-row">
-              <p class="price">$35</p>
-              <a href="#"><img
-                src="../images/shopping-cart.png"
-                alt="Shopping cart icon"
-                class="shopping-cart-image"
-              /></a>
-            </div>
-          </div>
+      </div>
 
-          <div class="card">
-            <img
-              src="../images/chocolate-cake.png"
-              alt="Yellow Fruit Cake"
-              class="product-image"
-            />
-            <h3 class="card-title">Chocolate Cake</h3>
-            <div class="card-row">
-              <p class="price">$35</p>
-              <a href="#"><img
-                src="../images/shopping-cart.png"
-                alt="Shopping cart icon"
-                class="shopping-cart-image"
-              /></a>
-            </div>
-          </div>
-
-          <div class="card">
-            <img
-              src="../images/blue-fruit-cake.png"
-              alt="Yellow Fruit Cake"
-              class="product-image"
-            />
-            <h3 class="card-title">Blue Fruit Cake</h3>
-            <div class="card-row">
-              <p class="price">$35</p>
-              <a href="#"><img
-                src="../images/shopping-cart.png"
-                alt="Shopping cart icon"
-                class="shopping-cart-image"
-              /></a>
-            </div>
-          </div>
-
-          <div class="card">
-            <img
-              src="../images/caramel-cake.png"
-              alt="Yellow Fruit Cake"
-              class="product-image"
-            />
-            <h3 class="card-title">Caramel Cake</h3>
-            <div class="card-row">
-              <p class="price">$35</p>
-              <a href="#"><img
-                src="../images/shopping-cart.png"
-                alt="Shopping cart icon"
-                class="shopping-cart-image"
-              /></a>
-            </div>
-          </div>
-
-          <div class="card">
-            <img
-              src="../images/chocolate-fruit-cake.png"
-              alt="Yellow Fruit Cake"
-              class="product-image"
-            />
-            <h3 class="card-title">Chocolate Fruit Cake</h3>
-            <div class="card-row">
-              <p class="price">$35</p>
-              <a href="#"><img
-                src="../images/shopping-cart.png"
-                alt="Shopping cart icon"
-                class="shopping-cart-image"
-              /></a>
-            </div>
-          </div>
-
-          <div class="card">
-            <img
-              src="../images/macaron-cake.png"
-              alt="Yellow Fruit Cake"
-              class="product-image"
-            />
-            <h3 class="card-title">Macaron Cake</h3>
-            <div class="card-row">
-              <p class="price">$35</p>
-              <a href="#"><img
-                src="../images/shopping-cart.png"
-                alt="Shopping cart icon"
-                class="shopping-cart-image"
-              /></a>
-            </div>
-          </div>
-
-          <div class="card">
-            <img
-              src="../images/rainbow-cake.png"
-              alt="Yellow Fruit Cake"
-              class="product-image"
-            />
-            <h3 class="card-title">Rainbow Cake</h3>
-            <div class="card-row">
-              <p class="price">$1.5 / sv</p>
-              <a href="#"><img
-                src="../images/shopping-cart.png"
-                alt="Shopping cart icon"
-                class="shopping-cart-image"
-              /></a>
-            </div>
-          </div>
-
-          <div class="card">
-            <img
-              src="../images/fanta-cake.png"
-              alt="Yellow Fruit Cake"
-              class="product-image"
-            />
-            <h3 class="card-title">Fanta Cake</h3>
-            <div class="card-row">
-              <p class="price">$1.5 / sv</p>
-              <a href="#"><img
-                src="../images/shopping-cart.png"
-                alt="Shopping cart icon"
-                class="shopping-cart-image"
-              /></a>
-            </div>
-          </div>
-
-          <div class="card">
-            <img
-              src="../images/mix-eclair.png"
-              alt="Yellow Fruit Cake"
-              class="product-image"
-            />
-            <h3 class="card-title">Mix Eclair</h3>
-            <div class="card-row">
-              <p class="price">$1.5 / sv</p>
-              <a href="#"><img
-                src="../images/shopping-cart.png"
-                alt="Shopping cart icon"
-                class="shopping-cart-image"
-              /></a>
-            </div>
-          </div>
+      <div class="card">
+        <img
+          src="../images/chocolate-cake.png"
+          alt="Yellow Fruit Cake"
+          class="product-image"
+        />
+        <h3 class="card-title">Chocolate Cake</h3>
+        <div class="card-row">
+          <p class="price">$35</p>
+          <a href="#"><img
+            src="../images/shopping-cart.png"
+            alt="Shopping cart icon"
+            class="shopping-cart-image"
+          /></a>
         </div>
-        <nav class="pagination">
-          <button class="pag-btn prev">&#8592</button>
-          <button class="pag-btn first">1</button>
-          <button class="pag-btn second">2</button>
-          <button class="pag-btn next">&#8594</button>
-        </nav>
-      </section>
-    </main>
-    <section class="footer-banner">
+      </div>
+
+      <div class="card">
+        <img
+          src="../images/blue-fruit-cake.png"
+          alt="Yellow Fruit Cake"
+          class="product-image"
+        />
+        <h3 class="card-title">Blue Fruit Cake</h3>
+        <div class="card-row">
+          <p class="price">$35</p>
+          <a href="#"><img
+            src="../images/shopping-cart.png"
+            alt="Shopping cart icon"
+            class="shopping-cart-image"
+          /></a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="../images/caramel-cake.png"
+          alt="Yellow Fruit Cake"
+          class="product-image"
+        />
+        <h3 class="card-title">Caramel Cake</h3>
+        <div class="card-row">
+          <p class="price">$35</p>
+          <a href="#"><img
+            src="../images/shopping-cart.png"
+            alt="Shopping cart icon"
+            class="shopping-cart-image"
+          /></a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="../images/chocolate-fruit-cake.png"
+          alt="Yellow Fruit Cake"
+          class="product-image"
+        />
+        <h3 class="card-title">Chocolate Fruit Cake</h3>
+        <div class="card-row">
+          <p class="price">$35</p>
+          <a href="#"><img
+            src="../images/shopping-cart.png"
+            alt="Shopping cart icon"
+            class="shopping-cart-image"
+          /></a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="../images/macaron-cake.png"
+          alt="Yellow Fruit Cake"
+          class="product-image"
+        />
+        <h3 class="card-title">Macaron Cake</h3>
+        <div class="card-row">
+          <p class="price">$35</p>
+          <a href="#"><img
+            src="../images/shopping-cart.png"
+            alt="Shopping cart icon"
+            class="shopping-cart-image"
+          /></a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="../images/rainbow-cake.png"
+          alt="Yellow Fruit Cake"
+          class="product-image"
+        />
+        <h3 class="card-title">Rainbow Cake</h3>
+        <div class="card-row">
+          <p class="price">$1.5 / sv</p>
+          <a href="#"><img
+            src="../images/shopping-cart.png"
+            alt="Shopping cart icon"
+            class="shopping-cart-image"
+          /></a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="../images/fanta-cake.png"
+          alt="Yellow Fruit Cake"
+          class="product-image"
+        />
+        <h3 class="card-title">Fanta Cake</h3>
+        <div class="card-row">
+          <p class="price">$1.5 / sv</p>
+          <a href="#"><img
+            src="../images/shopping-cart.png"
+            alt="Shopping cart icon"
+            class="shopping-cart-image"
+          /></a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="../images/mix-eclair.png"
+          alt="Yellow Fruit Cake"
+          class="product-image"
+        />
+        <h3 class="card-title">Mix Eclair</h3>
+        <div class="card-row">
+          <p class="price">$1.5 / sv</p>
+          <a href="#"><img
+            src="../images/shopping-cart.png"
+            alt="Shopping cart icon"
+            class="shopping-cart-image"
+          /></a>
+        </div>
+      </div>
+    </div>
+    <nav class="pagination">
+      <button class="pag-btn prev">&#8592</button>
+      <button class="pag-btn first">1</button>
+      <button class="pag-btn second">2</button>
+      <button class="pag-btn next">&#8594</button>
+    </nav>
+  </section>    
+      <section class="footer-banner">
       <div class="wrapper">
           <div class="col ">
-              <img class="footer-image" src="../css/images/footer-banner.jpg" alt="footer-banner-img">
+              <img class="footer-image" src="../images/footer-banner.jpg" alt="footer-banner-img">
               <div class="footer-banner-text">
                   <h1 class="footer-banner-image-heading">Sign Up For Newsletter</h1>
                   <p class="p-color-base">Get E-mail updates about our promotion and
@@ -212,17 +205,14 @@
       <div class="footer-container">
           <div class="footer">
               <div class="footer-top">
-
                   <div class="footer-heading footer-1">
-
                       <div class="logo">
                           <img src="../images/logo.png" alt="Cake Express logo">
                           <h3>Cake Express</h3>
                       </div>
-
                       <div class="contact-us">
                           <h2> Contact</h2>
-                          <p> Adress: Markanadsvagen 9,254 69 Odakra-vala</p>
+                          <p> Address: Markanadsvagen 9,254 69 Odakra-vala</p>
                           <p> Phone: (+46) 42248280</p>
                           <p> Hours: 10 am- 8 pm. Mon-Fri</p>
                       </div>
